@@ -2,24 +2,13 @@
 <project version="4">
   <component name="ChangeListManager">
     <list default="true" id="f5eae65c-5002-413a-b121-9a7f00fc4313" name="Default Changelist" comment="">
-      <change afterPath="$PROJECT_DIR$/src/Events/BloodBath.java" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/Events/BloodBathFatal.java" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/Events/Day.java" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/Events/DayFatal.java" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/Events/EventFatal.java" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/Events/EventNormal.java" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/Events/Feast.java" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/Events/Night.java" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/Events/NightFatal.java" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/Events/Precision sur les classes Events" afterDir="false" />
+      <change afterPath="$PROJECT_DIR$/src/MainActivity.java" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/ChangeLog" beforeDir="false" afterPath="$PROJECT_DIR$/ChangeLog" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/out/production/Hunger Game/HG/Joueur.class" beforeDir="false" afterPath="$PROJECT_DIR$/out/production/Hunger Game/HG/Joueur.class" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/out/production/Hunger Game/HG/ListJoueur.class" beforeDir="false" afterPath="$PROJECT_DIR$/out/production/Hunger Game/HG/ListJoueur.class" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/out/production/Hunger Game/HungerGame.class" beforeDir="false" afterPath="$PROJECT_DIR$/out/production/Hunger Game/HungerGame.class" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/HG/Joueur.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/HG/Joueur.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/HG/ListJoueur.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/HG/ListJoueur.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/HungerGame.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/HungerGame.java" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/Events/BloodBath.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/Events/BloodBath.java" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/Events/EventNormal.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/Events/EventNormal.java" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/HG/ListItems.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/HG/ListItems.java" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/HungerGame.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/HG/HungerGame.java" afterDir="false" />
     </list>
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
@@ -64,7 +53,7 @@
   </component>
   <component name="RunManager">
     <configuration name="HungerGame" type="Application" factoryName="Application" temporary="true" nameIsGenerated="true">
-      <option name="MAIN_CLASS_NAME" value="HungerGame" />
+      <option name="MAIN_CLASS_NAME" value="HG.HungerGame" />
       <module name="Hunger Game" />
       <method v="2">
         <option name="Make" enabled="true" />
@@ -147,10 +136,10 @@
       <screen x="0" y="33" width="1920" height="1047" />
     </state>
     <state width="1874" height="262" key="GridCell.Tab.0.right/0.33.1920.1047@0.33.1920.1047" timestamp="1583413433902" />
-    <state x="653" y="383" key="com.intellij.ide.util.TipDialog" timestamp="1583410219408">
+    <state x="653" y="383" key="com.intellij.ide.util.TipDialog" timestamp="1583487643747">
       <screen x="0" y="33" width="1920" height="1047" />
     </state>
-    <state x="653" y="383" key="com.intellij.ide.util.TipDialog/0.33.1920.1047@0.33.1920.1047" timestamp="1583410219408" />
+    <state x="653" y="383" key="com.intellij.ide.util.TipDialog/0.33.1920.1047@0.33.1920.1047" timestamp="1583487643747" />
     <state x="705" y="188" width="506" height="737" key="refactoring.ChangeSignatureDialog" timestamp="1583413123669">
       <screen x="0" y="33" width="1920" height="1047" />
     </state>
