@@ -1,3 +1,6 @@
+package HG;
+
+import Events.*;
 import HG.*;
 
 import java.util.ArrayList;
@@ -17,36 +20,42 @@ Partie custom pour essayer : http://brantsteele.net/hungergames/r.php?c=FMuMPYaE
 
 
 public class HungerGame {
-    public static void main(String[] args) {
-        //Initialise les variables
-        ListItems listeItems = initListeItems();
-        int jour = 1;
 
-        //Demande le nombre et les joueurs de la partie
-         ListJoueur listJoueurs = initJoueurs();
-         listJoueurs.afficheJoueurs();
-
-
-
-
+        //Attibuts
+        private ListItems listItems;
+        private BloodBath bloodBath;
+        private BloodBathFatal bloodBathFatal;
+        private Day day;
+        private DayFatal dayFatal;
+        private Night night;
+        private NightFatal nightFatal;
+        private ListJoueur listJoueurs;
 
 
-    }
+        // Constructeur
+        public HungerGame() {
+            listItems = new ListItems();                //Liste des Items
+            bloodBath = new BloodBath();                //Liste des phrases pour le BloodBath
+            bloodBathFatal = new BloodBathFatal();      //Liste des phrases pour le BloodBath (Mort)
+            day = new Day();                            //Liste des phrases pour le Jour
+            dayFatal = new DayFatal();                  //Liste des phrases pour le Jour (Mort)
+            night = new Night();                        //Liste des phrases pour la Nuit
+            nightFatal = new NightFatal();              //Liste des phrases pour la Nuit (Mort)
+            listJoueurs = initJoueurs();
+        }
 
-    private static void afficheListeJoueurs() {
-    }
 
-    private static ListJoueur initJoueurs() {
+    private ListJoueur initJoueurs() {
         //Demande le nombre de joueurs et appelle la fonction qui demande le nom des joueurs
         //Et initilise les districts aléatoirement
         //Retourne la liste des joueurs
         int choix = 0;
         int nbPersonnesParDistrict = 0;
-        ListJoueur listJoueurs = new ListJoueur();
+        listJoueurs = new ListJoueur();
         while (choix < 1 || choix > 5) {
             System.out.println("------ HUNGER GAMES ------");
             System.out.println("Choix du nombre de joueurs :\n ");
-            String[] menu = {"24 Tributs", "36 Tributs", "48 Tributs"};
+            String[] menu = {"24 Tributs", "36 Tributs", "48 Tributs", "Test Avec Liste Définie"};
             choix(menu, false);
             choix = saisirInt("Votre choix");
 
@@ -60,9 +69,6 @@ public class HungerGame {
                 nbPersonnesParDistrict = 48/12;
                 listJoueurs = demandeJoueurs(48);
             } else if (choix == 4) {
-                nbPersonnesParDistrict = 2;
-                listJoueurs = demandeJoueurs(4);
-            } else if (choix == 5) {
                 System.out.println("liste pré-defini a 24");
                 nbPersonnesParDistrict = 24/12;
                 listJoueurs = new ListJoueur(true);
@@ -74,7 +80,7 @@ public class HungerGame {
         return listJoueurs;
     }
 
-    private static ListJoueur setDistrict(int nbPersonnesDistrict, ListJoueur listJoueurs) {
+    private ListJoueur setDistrict(int nbPersonnesDistrict, ListJoueur listJoueurs) {
         ListJoueur res = new ListJoueur();
         listJoueurs.shuffle();
         int district = 1;
@@ -90,7 +96,7 @@ public class HungerGame {
         return res;
     }
 
-    private static ListJoueur demandeJoueurs(int nbr) {
+    private ListJoueur demandeJoueurs(int nbr) {
         //Demande le nom et le sexe du joueur
         ListJoueur listJoueurs = new ListJoueur();
         for (int i = 0; i < nbr; i++){
@@ -103,16 +109,5 @@ public class HungerGame {
             //System.out.println("Nom : " + listJoueurs.getJoueur(i).getNom() + "  Sexe : " + listJoueurs.getJoueur(i).getSexe() + "  District : " + listJoueurs.getJoueur(i).getDistrict());
         }
         return listJoueurs;
-    }
-
-
-    private static ListItems initListeItems(){
-        ListItems listItems = new ListItems();
-        listItems.addItem(new Item("Arc",2,0));
-        listItems.addItem(new Item("Epée",5,0));
-        listItems.addItem(new Item("Bouclier",0,5));
-        listItems.addItem(new Item("Trident",3,0));
-
-        return listItems;
     }
 }
