@@ -1,0 +1,15 @@
+import HG.HungerGame;
+
+public class MainActivity {
+    public static void main(String[] args) {
+        HungerGame hg = new HungerGame();
+        int jour = 0;
+        while (hg.getListJoueurs.size() > 1){
+
+            if(jour==0){
+
+            }
+            jour+=1;
+          }
+    }
+}
